# Ultrasound_Medical_Robots

./: .gitignore  README.md  TestBench.ipynb  USSeg.ipynb  Untitled.ipynb
iiwa_stack/.catkin_tools/profiles/default/: devel_collisions.txt
matlab/: convexity.m  grad.c  grad.hpp  opt_grad.m
matlab/experiment/: calcNtrue.m  calcTime.py  main.m  main_sim.m  plot_error.m  plot_error_sim.m
matlab/experiment/raw_data/: ._test_pose1.csv  ._test_vessel1.csv  ._test_vessel2.csv  data_end_point.csv  data_start_point.csv  test_pose1.csv  test_pose2.csv  test_pose3.csv  test_pose4.csv  test_pose5.csv  test_vessel1.csv  test_vessel2.csv  test_vessel3.csv  test_vessel4.csv  test_vessel5.csv
matlab/experiment/raw_data2/: data_end_point.csv  data_start_point.csv  pose1.csv  pose2.csv  pose3.csv  pose4.csv  pose5.csv  pose6.csv  vessel1.csv  vessel2.csv  vessel3.csv  vessel4.csv  vessel5.csv  vessel6.csv
matlab/simGeo_pc2_vis/: pc2_test.m  pub_pc_ros.m  simDataSet.m  transformSurf.m  us_image_ros.m  vesselSim.m
matlab/simReal_pc2_vis/: gTruth.mat  imageLabelingSession.mat  simDataSet.m  us_image_ros.m  vesselSim.m
matlab/sim_pc2_vis/: genVessel.m  us_image_ros.m  vesselSim.m
matlab/sim_vanilla/: main.m  us_image_ros.m  vesselSim.m  vesselSim_test.m
network/: TestBench.ipynb  USSeg.ipynb  Untitled.ipynb  imag_processing.ipynb  mkDataSet.py  train_eval.ipynb  train_eval_of.ipynb  train_eval_of2.ipynb
network/modules/: DataSet.py  Discriminator.py  Losses.py  UNet.py
plugin_ws/catkin_ws/src/ImfPublisherPlugin/: CMakeLists.txt  package.xml
plugin_ws/catkin_ws/src/ImfPublisherPlugin/cmake/: Macros.cmake
plugin_ws/catkin_ws/src/ImfPublisherPlugin/include/imf_publisher_plugin/: algorithm.h  controller.h  factory.h  plugin.h
plugin_ws/catkin_ws/src/ImfPublisherPlugin/src/: algorithm.cpp  controller.cpp  controller.ui  factory.cpp  plugin.cpp
plugin_ws/catkin_ws/src/ROS_OrientationaAjustment/: CMakeLists.txt  package.xml
plugin_ws/catkin_ws/src/ROS_OrientationaAjustment/include/orien_adj/: ConfidentMapConvex.h  OrienAdjAlgorithm.h  OrienAdjController.h  OrienAdjFactory.h  OrienAdjPlugin.h
plugin_ws/catkin_ws/src/ROS_OrientationaAjustment/src/: ConfidentMapConvex.cpp  OrienAdjAlgorithm.cpp  OrienAdjController.cpp  OrienAdjFactory.cpp  OrienAdjPlugin.cpp  controller.ui
ws/deprecated/image_processing/: CMakeLists.txt  package.xml
ws/deprecated/image_processing/src/: image_processing_node.py  net.py
ws/src/US_vessel_segmentation/: CMakeLists.txt  README.md  package.xml
ws/src/US_vessel_segmentation/include/: segmenter.h
ws/src/US_vessel_segmentation/src/: frameServer.cpp  segmenter.cpp
ws/src/US_vessel_segmentation/srv/: ultrasoundFrame.srv
ws/src/iiwa_bringup/: CMakeLists.txt  package.xml
ws/src/iiwa_bringup/launch/: iiwa_bringup.launch
ws/src/iiwa_bringup/src/: translator.cpp
ws/src/iiwa_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/iiwa_moveit_config/config/: fake_controllers.yaml  iiwa14.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
ws/src/iiwa_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa14_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ws/src/iiwa_tools/iiwa_cepha_description/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_cepha_description/launch/: iiwa7_cepha_upload.launch
ws/src/iiwa_tools/iiwa_cepha_description/meshes/: Linearprobe_reduced_cut.stl
ws/src/iiwa_tools/iiwa_cepha_description/urdf/: iiwa_cepha.urdf.xacro
ws/src/iiwa_tools/iiwa_cepha_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_convex_description/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_convex_description/launch/: iiwa7_convex_upload.launch
ws/src/iiwa_tools/iiwa_convex_description/urdf/: iiwa_convex.urdf  iiwa_convex.urdf.xacro
ws/src/iiwa_tools/iiwa_convex_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_gamma_description/: CMakeLists.txt  RoboticsAPI.data.xml  package.xml
ws/src/iiwa_tools/iiwa_gamma_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_linear_description/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_linear_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_pinoepel_description/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_pinoepel_moveit_config/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_plastic_pinoepel_description/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_plastic_pinoepel_description/launch/: iiwa7_plastic_pinoepel_upload.launch
ws/src/iiwa_tools/iiwa_plastic_pinoepel_description/urdf/: iiwa_plastic_pinoepel.urdf  iiwa_plastic_pinoepel.urdf.xacro
ws/src/iiwa_tools/iiwa_plastic_pinoepel_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_wobbler_description/: CMakeLists.txt  package.xml
ws/src/iiwa_tools/iiwa_wobbler_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ws/src/image_segmentation/: CMakeLists.txt  package.xml
ws/src/image_segmentation/launch/: image_segmentation.launch
ws/src/image_segmentation/msg/: VesselState.msg
ws/src/image_segmentation/src/: estimator_node.cpp  image_segmentation_node.cpp
ws/src/test_us_control/: CMakeLists.txt  package.xml
ws/src/test_us_control/launch/: _translator.launch  test.launch  test2.launch  translator.launch
ws/src/test_us_control/src/: test.cpp  translator.cpp
ws/src/us_controller/: CMakeLists.txt  package.xml
ws/src/us_controller/launch/: us_controller.launch
ws/src/us_controller/src/: test.cpp  us_controller_node.cpp  (+2 more)
ws/src/us_image_processing/: CMakeLists.txt  package.xml
(+157 files in other folders)
