<?xml version="1.0"?>
<package>
  <name>orien_adj</name>
  <version>0.0.1</version>
  <description>An empty description</description>

  <license>BSD</license>

  <author email="jzl96998@gmail.com">Zhongliang Jiang</author>
  <maintainer email="bob.someone@tum.de">Bob Someone</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  //JZL
  <build_depend>iiwa_ros</build_depend>
  <run_depend>iiwa_ros</run_depend>

  <build_depend>iiwa_msgs</build_depend>
  <run_depend>iiwa_msgs</run_depend>
  //JZL
</package>
